fix health-check z-index

--- a/src/component/health-check/HealthCheck.css
+++ b/src/component/health-check/HealthCheck.css
@@ -4,7 +4,7 @@
     top: 50px;
     right: 5px;
     position: absolute;
-    z-index: 9999;
+    z-index: 1999;
     overflow: hidden;
     border-radius: 50%;
 }
